--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,16 @@
-beautifulsoup4==4.12.3
+//スクレイピングで直接的に必要なライブラリ
+beautifulsoup4==4.12.3 
+requests==2.32.3
+urllib3==2.2.2
+googlesearch-python==1.2.4
+soupsieve==2.5 //beautifulsoup4の内部依存
+
+//特定の条件で必要なライブラリ
 cachetools==5.4.0
 certifi==2024.7.4
 charset-normalizer==3.3.2
 google-auth==2.32.0
 google-auth-oauthlib==1.2.1
-googlesearch-python==1.2.4
 gspread==6.1.2
 httplib2==0.22.0
 idna==3.7
@@ -13,9 +19,6 @@ oauthlib==3.2.2
 pyasn1==0.6.0
 pyasn1_modules==0.4.0
 pyparsing==3.1.2
-requests==2.32.3
 requests-oauthlib==2.0.0
 rsa==4.9
 six==1.16.0
-soupsieve==2.5
-urllib3==2.2.2
