--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+CSE_scraping_eternal-ruler-429403-f1-48ccbfea91a9
 eternal-ruler-429403-f1-4149103d6f77.json
 secret_key.py
 secret_key.cpython-312.pyc
