--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,8 @@ params.json
 .myenv
 *.csv
 params.json
-config.toml
+secrets.toml
+.streamlit/
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
