--- a/.gitignore
+++ b/.gitignore
@@ -2,11 +2,11 @@ cse-scraper-434501-74bdeaa42c89.json
 secret_key.py
 secret_key.cpython-312.pyc
 params.json
-.myenv
+myenv
 *.csv
 params.json
 secrets.toml
-# .streamlit/
+auth.py
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
