--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,21 @@
 altair==5.4.1
 attrs==24.2.0
+Authlib==1.3.2
 blinker==1.8.2
+cachelib==0.13.0
 cachetools==5.5.0
 certifi==2024.8.30
+cffi==1.17.0
 charset-normalizer==3.3.2
 click==8.1.7
+cryptography==43.0.0
+Flask==2.2.3
+Flask-OAuthlib==0.9.6
 gitdb==4.0.11
 GitPython==3.1.43
-google-api-python-client==2.142.0
 idna==3.8
+importlib-metadata==6.11.0
+itsdangerous==2.2.0
 Jinja2==3.1.4
 jsonschema==4.23.0
 jsonschema-specifications==2023.12.1
@@ -16,26 +23,35 @@ markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 mdurl==0.1.2
 narwhals==1.6.0
-numpy==2.1.0
-packaging==24.1
+numpy==1.26.4
+oauthlib==2.1.0
+packaging==23.2
 pandas==2.2.2
-pillow==10.4.0
-protobuf==5.28.0
+Pillow==9.5.0
+protobuf==4.25.4
 pyarrow==17.0.0
+pycparser==2.22
 pydeck==0.9.1
 Pygments==2.18.0
+Pympler==1.1
 python-dateutil==2.9.0.post0
 pytz==2024.1
+pytz-deprecation-shim==0.1.0.post0
 referencing==0.35.1
 requests==2.32.3
+requests-oauthlib==1.1.0
 rich==13.8.0
 rpds-py==0.20.0
 six==1.16.0
 smmap==5.0.1
-streamlit==1.38.0
-tenacity==8.3.0
+streamlit==1.24.0
+tenacity==8.5.0
 toml==0.10.2
 tornado==6.4.1
 typing_extensions==4.12.2
 tzdata==2024.1
+tzlocal==4.3.1
 urllib3==2.2.2
+validators==0.33.0
+Werkzeug==3.0.4
+zipp==3.20.1
